fixed all compiler warnings related to the recent java upgrade