@@ -1,12 +1,7 @@
 package com.aionemu.gameserver.world.zone;
 
 import java.io.File;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -21,11 +16,7 @@ import com.aionemu.gameserver.dataholders.DataManager;
 import com.aionemu.gameserver.dataholders.ZoneData;
 import com.aionemu.gameserver.geoEngine.scene.Spatial;
 import com.aionemu.gameserver.model.GameEngine;
-import com.aionemu.gameserver.model.geometry.Area;
-import com.aionemu.gameserver.model.geometry.CylinderArea;
-import com.aionemu.gameserver.model.geometry.PolyArea;
-import com.aionemu.gameserver.model.geometry.SemisphereArea;
-import com.aionemu.gameserver.model.geometry.SphereArea;
+import com.aionemu.gameserver.model.geometry.*;
 import com.aionemu.gameserver.model.siege.SiegeLocation;
 import com.aionemu.gameserver.model.siege.SiegeShield;
 import com.aionemu.gameserver.model.templates.materials.MaterialTemplate;
@@ -36,11 +27,7 @@ import com.aionemu.gameserver.model.templates.zone.ZoneInfo;
 import com.aionemu.gameserver.model.templates.zone.ZoneTemplate;
 import com.aionemu.gameserver.model.vortex.VortexLocation;
 import com.aionemu.gameserver.services.ShieldService;
-import com.aionemu.gameserver.world.zone.handler.GeneralZoneHandler;
-import com.aionemu.gameserver.world.zone.handler.MaterialZoneHandler;
-import com.aionemu.gameserver.world.zone.handler.ZoneHandler;
-import com.aionemu.gameserver.world.zone.handler.ZoneHandlerClassListener;
-import com.aionemu.gameserver.world.zone.handler.ZoneNameAnnotation;
+import com.aionemu.gameserver.world.zone.handler.*;
 
 import gnu.trove.map.hash.TIntObjectHashMap;
 
@@ -92,7 +79,7 @@ public final class ZoneService implements GameEngine {
 		Class<? extends ZoneHandler> zoneClass = zoneHandlers.get(zoneName);
 		if (zoneClass != null) {
 			try {
-				zoneHandler = zoneClass.newInstance();
+				zoneHandler = zoneClass.getDeclaredConstructor().newInstance();
 			} catch (Exception ex) {
 				log.warn("Can't instantiate zone handler " + zoneName, ex);
 			}
